--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,12 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.5"
+    "vue-barcode-reader": "^1.0.3",
+    "vue-qrcode-reader": "^3.1.0",
+    "vue-router": "^4.1.5",
+    "vue3-qr-reader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
