--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "carassembly-client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,12 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "dotenv": "^16.0.3",
+    "dotenv-expand": "^9.0.0",
+    "fs": "0.0.1-security",
     "jquery": "^3.6.1",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "vue": "^3.2.13",
     "vue-barcode-reader": "^1.0.3",
     "vue-qrcode-reader": "^3.1.0",
