--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 before_install:
   - msgid=$(echo `curl -X POST https://api.telegram.org/bot$TELEGRAM_TOKEN/sendMessage -d chat_id="-1001519558371" -d parse_mode="HTML" -d disable_web_page_preview="True" -d "text=<b>Build is in progress...</b> %0A%0ABranch - <a href='https://github.com/stt08/car-assembly/tree/$TRAVIS_BRANCH'>$TRAVIS_BRANCH</a>" -s` | sed -n 's/.*"message_id":\([0-9]*\).*/\1/p')
 install:
-  - echo 'npm run build includes installation'
+  - npm install
 script:
   - npm run build
   - echo `MONGO=$MONGO` > .env
