--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,14 @@
     "vue-barcode-reader": "^1.0.3",
     "vue-qrcode-reader": "^3.1.0",
     "vue-router": "^4.1.5",
-    "vue3-qr-reader": "^1.0.0"
+    "vue3-qr-reader": "^1.0.0",
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
