server unit tests

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "install": "cd client && npm install && cd ../server && npm install && cd ..",
     "build": "cd client && npm run build && cd ..",
     "start": "node server/app.js",
+    "test": "cd server && npm install -g jest && npm run test",
     "heroku-prebuild": "cd client && npm install -g @vue/cli-service @vue/cli-plugin-babel @vue/cli-plugin-eslint && cd .."
   },
   "author": "Tamerlan",
