--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "test": "jest --silent --forceExit"
   },
   "author": "Tamerlan",
   "license": "ISC",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.3",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20"
   }
 }
