--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 script:
   - npm run build
   - echo `MONGO=$MONGO` > .env
-  - npm run test
+  - npm run customTest
   - echo `Current branch - $TRAVIS_BRANCH`
 cache:
   directories:
